--- a/.env
+++ b/.env
@@ -17,3 +17,19 @@
 APP_ENV=dev
 APP_SECRET=d43d03c1e59665a0f6fa791044860627
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+
+# Database configuration
+DATABASE_URL="mysql://root:secret@127.0.0.1:3306/desafio"
+
+###< doctrine/doctrine-bundle ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
