--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/http-foundation": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/rate-limiter": "6.0.*",
         "symfony/runtime": "6.0.*",
