--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=d43d03c1e59665a0f6fa791044860627
 #
 
 # Database configuration
-DATABASE_URL="mysql://root:secret@127.0.0.1:3306/desafio"
+DATABASE_URL="mysql://root:secret@127.0.0.1:3306/challenge"
 
 ###< doctrine/doctrine-bundle ###
 
